--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ services:
 before_install:
   - docker build -t dandakiran/docker-react -f Dockerfile.dev .
 script:
-  - docker run dandakiran/docker-react npm run test -- --coverage
+  - docker run -e CI=true dandakiran/docker-react npm run test -- --coverage
 
